--- a/story.org
+++ b/story.org
@@ -113,3 +113,5 @@ and what did they produce?  The cuckoo-clock.
 
 ** TODO use 'tree' on the wiki and github repos to list the entire projects into text files
 ** TODO implement HTML scrapers with https://github.com/AccelerationNet/css-selectors
+** TODO bring in echo library for image loading
+
