middle click panning

--- a/story.org
+++ b/story.org
@@ -172,4 +172,4 @@ Exchanging and persisting data between devices and services
 *** TODO git-html5.js
 *** TODO octokat.js
 ** TODO browserfy
-
+** TODO espeak for Lakhota
